--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@types/draft-js": "^0.11.18",
     "axios": "^1.11.0",
+    "draft-js": "^0.11.7",
+    "draft-js-export-html": "^1.4.1",
     "next": "15.5.1",
     "react": "19.1.0",
     "react-dom": "19.1.0"
